# MysqlUtil

./: .gitattributes  CMakeLists.txt  README.md  README.txt
include/: sql_error.h  table.h
include/easysql/: sqlcommand.h  sqlexpression.h  sqloperator.h
include/field/: fd_type.hpp  field.h  value.h  valuecheck.h
lib/config/: remote.xml  tableclass.template
src/: CMakeLists.txt
src/SQLTool/: CMakeLists.txt  main.cpp  readDB.cpp  readDB.h
src/SQLTool/genClass/: gen-tableclass.cpp  gen-tableclass.h
src/common/: chkvalue.cpp  dbconfig.cpp  field.cpp  gensql.cpp
src/ezSQL/: CMakeLists.txt  sqloperator.cpp
src/ezSQL/command/: insert_command.cpp  query_command.cpp  sqlcommand.cpp
src/ezSQL/core/: sqlcore.cpp  sqlcore.h
src/inc/: dbconfig.h  gensql.h
src/pool/: conn-pool.h  mysql-conn-pool.cpp  mysql-conn-pool.h
test/: CMakeLists.txt  t_data.hpp  t_datakey.hpp  t_licKey.hpp  t_license.hpp  t_userinfo.hpp  t_userinfo1.hpp  t_userkey.hpp  test.cpp
